# matrixlab

./: .gitlab-ci.yml  Cargo.toml  README.md  WRITEUP.md  mcca.mtx  test.txt
src/: dense.rs  error.rs  iter.rs  lib.rs  main.rs  matrix.rs  vector.rs
src/matrix/: dense.rs  dense_matrix_iter.rs  gmres.rs  mod.rs  sparse.rs  sparse_matrix_iter.rs
src/test/: dense.rs  gmres.rs  matrix.rs  mod.rs  sparse.rs
src/test/matrix/: dense.rs  mod.rs  sparse.rs
src/vector/: dense.rs  mod.rs  sparse.rs
tests/: gmres.rs  mod.rs
tests/matrix/: dense.rs  sparse.rs
tests/vector/: mod.rs
