[package]
authors = ["Waylon Cude <waylon.cude@finzdani.net>"]
edition = "2018"
name = "matrixlab"
version = "0.2.0"
license = "GPL-3.0-or-later"
description = "A matrix library that supports both sparse and dense matrices."
repository = "https://gitlab.com/waylon531/matrixlab"
readme = "README.md"

[badges]
gitlab = { repository = "waylon531/matrixlab", branch = "master" }

[dependencies]
rayon = "1.0.3"
ndarray = "0.13.0"

[dev-dependencies]
proptest = "0.9"
