[package]
authors = ["Waylon Cude <waylon.cude@finzdani.net>", "Austen Nelson <>"]
edition = "2018"
name = "matrixlab"
version = "0.2.0"
license = "MPL-2.0"
description = "A matrix library that supports both sparse and dense matrices."
repository = "https://gitlab.com/waylon531/matrixlab"
readme = "README.md"

[badges]
gitlab = { repository = "waylon531/matrixlab", branch = "master" }

[dependencies]
rayon = "1.0.3"
ndarray = "0.13.0"
rand = "0.7.2"
itertools = "0.8.1"

[dev-dependencies]
proptest = "0.9"
